ecmascript/parser/tests/test262-error-references/fail/d04aecd166354406.js.stderr
error: Legacy octal escape is not permitted in strict mode
 --> $DIR/tests/test262-parser/fail/d04aecd166354406.js:1:17
  |
1 | 'use strict'; ('\1')
  |                 ^^

